@@ -26,22 +26,6 @@
   <name>Archiva :: Web</name>
   <packaging>pom</packaging>
 
-  <properties>
-    <container.test.port>9696</container.test.port>
-    <tomcat5x.version>5.5.34</tomcat5x.version>
-    <tomcat6x.version>6.0.35</tomcat6x.version>
-    <cargo.wait>false</cargo.wait>
-    <cargo.timeout>600000</cargo.timeout>
-    <cargo.install.dir>${project.build.directory}/cargo/installs</cargo.install.dir>
-    <maxWaitTimeInMs>10000</maxWaitTimeInMs>
-    <!-- TODO: review how appropriate the memory settings are - should work with less -->
-    <cargo.jvm.args>-Xmx512m -XX:MaxPermSize=256m</cargo.jvm.args>
-    <seleniumPluginVersion>2.3</seleniumPluginVersion>
-    <selenium-server.version>2.28.0</selenium-server.version>
-    <apache.mirror.url>http://archive.apache.org/dist</apache.mirror.url>
-    <apache.archive.url>http://archive.apache.org/dist</apache.archive.url>
-  </properties>
-
   <modules>
     <module>archiva-security</module>
     <module>archiva-webdav</module>
